<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab 1</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="startHelloWorldTxtViewTxt">Hello World!</string>
    <string name="startImABtnTxt">I\'m a button</string>
    <string name="startChatBtnTxt">Start Chat</string>
    <string name="weatherForecastBtnTxt">Weather Forecast</string>

    <string name="loginEmailTxtViewTxt">Email</string>
    <string name="loginPasswordTxtViewTxt">Password</string>
    <string name="loginLoginBtnTxt">Login</string>

    <string name="listItemsRadioBtnTxt">Button 1</string>
    <string name="listItemsChkBxTxt">Checkbox 1</string>
    <string name="listItemsEnableSwitchTxt">Enable Something</string>

    <string name="first_time_email">email@domain.com</string>

    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Question</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>

    <string name="title_activity_chat_window">ChatWindow</string>
    <string name="chatSendBtnTxt">Send</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>

</resources>
